@@ -18,19 +18,19 @@ package io.agentscope.runtime.sandbox.tools.browser;
 import io.agentscope.runtime.sandbox.box.BrowserSandbox;
 import io.agentscope.runtime.sandbox.box.Sandbox;
 import io.agentscope.runtime.sandbox.tools.SandboxTool;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.logging.Logger;
 
 /**
  * Browser file upload tool
  */
 public class FileUploadTool extends BrowserSandboxTool {
 
-    Logger logger = Logger.getLogger(FileUploadTool.class.getName());
+    private static final Logger logger = LoggerFactory.getLogger(FileUploadTool.class);
 
     public FileUploadTool() {
         super("browser_file_upload", "browser", "Upload files in the browser");
@@ -43,7 +43,7 @@ public class FileUploadTool extends BrowserSandboxTool {
         Map<String, Object> properties = new HashMap<>();
         properties.put("paths", pathsProperty);
 
-        List<String> required = Arrays.asList("paths");
+        List<String> required = List.of("paths");
 
         schema.put("type", "object");
         schema.put("properties", properties);
@@ -65,8 +65,7 @@ public class FileUploadTool extends BrowserSandboxTool {
             throw new RuntimeException("Only BrowserSandbox supported in browser file upload tool");
         } catch (Exception e) {
             String errorMsg = "Browser File Upload Error: " + e.getMessage();
-            logger.severe(errorMsg);
-            e.printStackTrace();
+            logger.error(errorMsg);
             return errorMsg;
         }
     }
